try fix overflow mobile

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -351,7 +351,7 @@ max-height: 550px;
 	body{
 		color:#E6E6E6 ;
 		background: url("../images/shattered.png") #242222;
-		overflow-y: none;
+		overflow-y: auto;
 	}
 
 	/* typo */
